Add image upload with Paperclip

--- a/app/views/brands/edit.html.erb
+++ b/app/views/brands/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing brand</h1>
+<div class="container">
+	<h1>Editing brand</h1>
 
-<%= render 'form' %>
+	<%= render 'form' %>
 
-<%= link_to 'Show', @brand %> |
-<%= link_to 'Back', brands_path %>
+	<%= link_to 'Show', @brand %> |
+	<%= link_to 'Back', brands_path %>
+</div>
