--- a/app/views/brands/_form.html.erb
+++ b/app/views/brands/_form.html.erb
@@ -12,32 +12,36 @@
   <% end %>
 
   <div class="form-group">
-    <%= f.label :name %><br>
+    <%= f.label :name %>
     <%= f.text_field :name, class: "form-control" %>
   </div>
   <div class="form-group">
-    <%= f.label :username %><br>
+    <%= f.label :username %>
     <%= f.text_field :username, class: "form-control" %>
   </div>
   <div class="form-group">
-    <%= f.label :description %><br>
+    <%= f.label :description %>
     <%= f.text_area :description, class: "form-control" %>
   </div>
   <div class="form-group">
-    <%= f.label :website %><br>
+    <%= f.label :website %>
     <%= f.text_field :website, class: "form-control" %>
   </div>
   <div class="form-group">
-    <%= f.label :facebook %><br>
+    <%= f.label :facebook %>
     <%= f.text_field :facebook, class: "form-control" %>
   </div>
   <div class="form-group">
-    <%= f.label :twitter %><br>
+    <%= f.label :twitter %>
     <%= f.text_field :twitter, class: "form-control" %>
   </div>
   <div class="form-group">
-    <%= f.label :instagram %><br>
+    <%= f.label :instagram %>
     <%= f.text_field :instagram, class: "form-control" %>
+  </div>
+  <div class="form-group">
+    <%= f.label :image %>
+    <%= f.file_field :image, class: "form-control" %>
   </div>
   <div class="actions">
     <%= f.submit class: "btn btn-primary" %>
