--- a/app/views/brands/index.html.erb
+++ b/app/views/brands/index.html.erb
@@ -1,39 +1,41 @@
-<h1>Listing brands</h1>
+<div class="container">
+  <h1>Listing brands</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Username</th>
-      <th>Description</th>
-      <th>Website</th>
-      <th>Facebook</th>
-      <th>Twitter</th>
-      <th>Instagram</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @brands.each do |brand| %>
+  <table>
+    <thead>
       <tr>
-        <td><%= brand.name %></td>
-        <td><%= brand.username %></td>
-        <td><%= brand.description %></td>
-        <td><%= brand.website %></td>
-        <td><%= brand.facebook %></td>
-        <td><%= brand.twitter %></td>
-        <td><%= brand.instagram %></td>
-        <td><%= link_to 'Show', brand %></td>
-        <td><%= link_to 'Edit', edit_brand_path(brand) %></td>
-        <td><%= link_to 'Destroy', brand, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Name</th>
+        <th>Username</th>
+        <th>Description</th>
+        <th>Website</th>
+        <th>Facebook</th>
+        <th>Twitter</th>
+        <th>Instagram</th>
+        <th></th>
+        <th></th>
+        <th></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
+    <tbody>
+      <% @brands.each do |brand| %>
+        <tr>
+          <td><%= brand.name %></td>
+          <td><%= brand.username %></td>
+          <td><%= brand.description %></td>
+          <td><%= brand.website %></td>
+          <td><%= brand.facebook %></td>
+          <td><%= brand.twitter %></td>
+          <td><%= brand.instagram %></td>
+          <td><%= link_to 'Show', brand %></td>
+          <td><%= link_to 'Edit', edit_brand_path(brand) %></td>
+          <td><%= link_to 'Destroy', brand, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<%= link_to 'New Brand', new_brand_path %>
+  <br>
+
+  <%= link_to 'New Brand', new_brand_path %>
+</div>
