--- a/app/views/brands/new.html.erb
+++ b/app/views/brands/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New brand</h1>
+<div class="container">
+	<h1>New brand</h1>
 
-<%= render 'form' %>
+	<%= render 'form' %>
 
-<%= link_to 'Back', brands_path %>
+	<%= link_to 'Back', brands_path %>
+</div>
