--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,9 @@
+<div class="jumbotron main_jumbo">
+	<div class="container">
+		<p class="cabin jumbo_copy">GET FREAKING SMART</p>
+		<h4>(or at least act like it)</h4>
+	</div>
+</div>
 <div class="container">
 	<h1>Welcome to my app!</h1>
 	<p>Sign up here</p>
