--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -1,3 +1,26 @@
 // Place all the styles related to the pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.link-grey {
+	color: #37474F;
+}
+
+.link-grey:hover {
+	color: #37474F;
+}
+
+.main_jumbo {
+	//background: url('banner.jpg') center;
+	background-color: #fff;
+	height: 500px;
+  color: #fff;
+  text-align: center;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);
+  margin-top: -20px;
+}
+.main_jumbo_text {
+	h3 {
+		line-height: 40px;
+	}
+}
