--- a/app/views/brands/_form.html.erb
+++ b/app/views/brands/_form.html.erb
@@ -20,8 +20,16 @@
     <%= f.text_field :username, class: "form-control" %>
   </div>
   <div class="form-group">
+    <%= f.label :momentum %>
+    <%= f.text_field :momentum, class: "form-control" %>
+  </div>
+  <div class="form-group">
     <%= f.label :description %>
     <%= f.text_area :description, class: "form-control" %>
+  </div>
+  <div class="form-group">
+    <%= f.label :industry %>
+    <%= f.text_field :industry, class: "form-control" %>
   </div>
   <div class="form-group">
     <%= f.label :website %>
@@ -42,6 +50,10 @@
   <div class="form-group">
     <%= f.label :image %>
     <%= f.file_field :image, class: "form-control" %>
+  </div>
+  <div class="form-group">
+    <%= f.label :history %>
+    <%= f.text_area :history, class: "form-control" %>
   </div>
   <div class="actions">
     <%= f.submit class: "btn btn-primary" %>
