--- a/app/views/brands/index.html.erb
+++ b/app/views/brands/index.html.erb
@@ -1,41 +1,66 @@
 <div class="container">
-  <h1>Listing brands</h1>
-
-  <table>
-    <thead>
-      <tr>
-        <th>Name</th>
-        <th>Username</th>
-        <th>Description</th>
-        <th>Website</th>
-        <th>Facebook</th>
-        <th>Twitter</th>
-        <th>Instagram</th>
-        <th></th>
-        <th></th>
-        <th></th>
-      </tr>
-    </thead>
-
-    <tbody>
-      <% @brands.each do |brand| %>
-        <tr>
-          <td><%= brand.name %></td>
-          <td><%= brand.username %></td>
-          <td><%= brand.description %></td>
-          <td><%= brand.website %></td>
-          <td><%= brand.facebook %></td>
-          <td><%= brand.twitter %></td>
-          <td><%= brand.instagram %></td>
-          <td><%= link_to 'Show', brand %></td>
-          <td><%= link_to 'Edit', edit_brand_path(brand) %></td>
-          <td><%= link_to 'Destroy', brand, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
-
-  <br>
-
   <%= link_to 'New Brand', new_brand_path %>
+  <br /><br />
+  <div style="background-color: #fff;">
+    <%= form_tag brands_path, :method => 'get' do %>
+      <p>
+        <%= text_field_tag :search, params[:search] %>
+        <%= submit_tag "Search", :name => nil, :class => "btn btn-primary"  %>
+      </p>
+    <% end %>
+  </div>
+  <div style="background-color: #fff;">
+    <div class="table-responsive">
+      <table class="table table-hover table-condensed sortable-theme-bootstrap" id="brand-table" data-sortable>
+        <col width="50">
+        <thead>
+          <tr>
+            <th colspan="2" style="text-align: left;">Company</th>
+            <th>Momentum</th>
+            <th>Industry</th>
+            <th data-sortable="false">Social Media Presence</th>
+            <th>Website</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @brands.each do |brand| %>
+            <tr>
+              <td>
+                <%= link_to image_tag(brand.image.url(:thumb), :size => "50x50", :class => "img-rounded"), brand %>
+              </td>
+              <td style="text-align: left;">
+                <h4><%= link_to brand.name, brand,  :class => "link-grey" %></h4>
+                <p style="margin-top: -10px; font-style: italic;"><small><%= brand.username %></small></p>
+              </td>
+              <td><%= brand.momentum %></td>
+              <td><%= brand.industry %></td>
+              <td>
+                <% if brand.facebook.present? %>
+                  <%= link_to "http://#{brand.facebook}" do %>
+                    <i class="fa fa-facebook fa-lg fa-fw link-grey"></i>
+                  <% end %>
+                <% end %>
+                <% if brand.twitter.present? %>
+                  <%= link_to "http://#{brand.twitter}" do %>
+                    <i class="fa fa-twitter fa-lg fa-fw link-grey"></i>
+                  <% end %>
+                <% end %>
+                <% if brand.instagram.present? %>
+                  <%= link_to "http://#{brand.instagram}" do %>
+                    <i class="fa fa-instagram fa-lg fa-fw link-grey"></i>
+                  <% end %>
+                <% end %>
+              </td>
+              <td><%= link_to brand.website, "http://#{brand.website}", :class => "link-grey" %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </div>
+
+<script>
+/*! sortable.js 0.6.0 */
+(function(){var a,b,c,d,e,f,g;a="table[data-sortable]",d=/^-?[£$¤]?[\d,.]+%?$/,g=/^\s+|\s+$/g,f="ontouchstart"in document.documentElement,c=f?"touchstart":"click",b=function(a,b,c){return null!=a.addEventListener?a.addEventListener(b,c,!1):a.attachEvent("on"+b,c)},e={init:function(b){var c,d,f,g,h;for(null==b&&(b={}),null==b.selector&&(b.selector=a),d=document.querySelectorAll(b.selector),h=[],f=0,g=d.length;g>f;f++)c=d[f],h.push(e.initTable(c));return h},initTable:function(a){var b,c,d,f,g,h;if(1===(null!=(h=a.tHead)?h.rows.length:void 0)&&"true"!==a.getAttribute("data-sortable-initialized")){for(a.setAttribute("data-sortable-initialized","true"),d=a.querySelectorAll("th"),b=f=0,g=d.length;g>f;b=++f)c=d[b],"false"!==c.getAttribute("data-sortable")&&e.setupClickableTH(a,c,b);return a}},setupClickableTH:function(a,d,f){var g;return g=e.getColumnType(a,f),b(d,c,function(){var b,c,h,i,j,k,l,m,n,o,p,q,r,s,t,u;for(j="true"===this.getAttribute("data-sorted"),k=this.getAttribute("data-sorted-direction"),b=j?"ascending"===k?"descending":"ascending":g.defaultSortDirection,m=this.parentNode.querySelectorAll("th"),n=0,q=m.length;q>n;n++)d=m[n],d.setAttribute("data-sorted","false"),d.removeAttribute("data-sorted-direction");for(this.setAttribute("data-sorted","true"),this.setAttribute("data-sorted-direction",b),l=a.tBodies[0],h=[],t=l.rows,o=0,r=t.length;r>o;o++)c=t[o],h.push([e.getNodeValue(c.cells[f]),c]);for(j?h.reverse():h.sort(g.compare),u=[],p=0,s=h.length;s>p;p++)i=h[p],u.push(l.appendChild(i[1]));return u})},getColumnType:function(a,b){var c,f,g,h,i;for(i=a.tBodies[0].rows,g=0,h=i.length;h>g;g++)if(c=i[g],f=e.getNodeValue(c.cells[b]),""!==f){if(f.match(d))return e.types.numeric;if(!isNaN(Date.parse(f)))return e.types.date}return e.types.alpha},getNodeValue:function(a){return a?null!==a.getAttribute("data-value")?a.getAttribute("data-value"):"undefined"!=typeof a.innerText?a.innerText.replace(g,""):a.textContent.replace(g,""):""},types:{numeric:{defaultSortDirection:"descending",compare:function(a,b){var c,d;return c=parseFloat(a[0].replace(/[^0-9.-]/g,""),10),d=parseFloat(b[0].replace(/[^0-9.-]/g,""),10),isNaN(c)&&(c=0),isNaN(d)&&(d=0),d-c}},alpha:{defaultSortDirection:"ascending",compare:function(a,b){return a[0].localeCompare(b[0])}},date:{defaultSortDirection:"ascending",compare:function(a,b){var c,d;return c=Date.parse(a[0]),d=Date.parse(b[0]),isNaN(c)&&(c=0),isNaN(d)&&(d=0),c-d}}}},setTimeout(e.init,0),window.Sortable=e}).call(this);
+</script>
