--- a/app/views/brands/index.html.erb
+++ b/app/views/brands/index.html.erb
@@ -15,7 +15,8 @@
         <col width="50">
         <thead>
           <tr>
-            <th colspan="2" style="text-align: left;">Company</th>
+            <th data-sortable="false"></th>
+            <th style="text-align: left;">Company</th>
             <th>Momentum</th>
             <th>Industry</th>
             <th data-sortable="false">Social Media Presence</th>
