--- a/app/assets/stylesheets/brands.css.scss
+++ b/app/assets/stylesheets/brands.css.scss
@@ -4,11 +4,11 @@
 
 #brand-table {
 	th {
-		text-align: center;
+		text-align: left;
 		border-top: none;
 	}
 	td {
 		vertical-align: middle;
-		text-align: center;
+		text-align: left;
 	}
 }
