--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,5 +12,6 @@
  *= require font-awesome
  *= require bootstrap-typeahead-rails
  *= require sortable-theme-bootstrap
+ *= require typeaheadjs
  *= require_tree .
  */
