--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -12,15 +12,10 @@
 
 .main_jumbo {
 	//background: url('banner.jpg') center;
-	background-color: #fff;
+	background-color: #FFEB3B;
 	height: 500px;
-  color: #fff;
+  //color: #fff;
   text-align: center;
-  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);
+  //text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);
   margin-top: -20px;
-}
-.main_jumbo_text {
-	h3 {
-		line-height: 40px;
-	}
 }
