--- a/app/views/brands/index.html.erb
+++ b/app/views/brands/index.html.erb
@@ -1,4 +1,3 @@
-<%= javascript_include_tag "sortable" %>
 <%= stylesheet_link_tag "sortable-theme-bootstrap" %>
 
 <div class="container">
@@ -8,21 +7,23 @@
     <div id="the-basics">
       <%= form_tag brands_path, :method => 'get' do %>
         <p>
-          <%= text_field_tag :search, params[:search], :placeholder => "Explore by brand name", :class => "form-control typeahead" %>
-          <%= submit_tag "Search", :name => nil, :class => "btn btn-default btn-xs"  %>
+          <%= text_field_tag(:search, params[:search], :placeholder => "Explore by brand name", :class => "form-control typeahead") %>
+          <div style="position: absolute; top: -9999px;"><%= submit_tag "Search", :name => nil, :class => "btn btn-default btn-xs"  %></div>
         </p>
       <% end %>
     </div>
-    <div class="dropdown">
-      <button class="btn btn-default btn-xs dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
-        Industry
-        <span class="caret"></span>
-      </button>
-      <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-        <li role="presentation"><a role="menuitem" tabindex="-1" href="/brands">All</a></li>
-        <li role="presentation"><a role="menuitem" tabindex="-1" href="?industry=Clothing">Clothing</a></li>
-        <li role="presentation"><a role="menuitem" tabindex="-1" href="?industry=Restaurants">Restaurants</a></li>
-      </ul>
+    <div style="margin-left: 15px;">
+      <div class="dropdown">
+        <button class="btn-filter btn-default btn-xs dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
+          Industry
+          <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+          <li role="presentation"><a role="menuitem" tabindex="-1" href="/brands">All</a></li>
+          <li role="presentation"><a role="menuitem" tabindex="-1" href="?industry=Clothing">Clothing</a></li>
+          <li role="presentation"><a role="menuitem" tabindex="-1" href="?industry=Restaurants">Restaurants</a></li>
+        </ul>
+      </div>
     </div>
   </div>
   <br />
@@ -81,42 +82,6 @@
   </div>
 </div>
 
-<script>
-  var substringMatcher = function(strs) {
-  return function findMatches(q, cb) {
-    var matches, substrRegex;
- 
-    // an array that will be populated with substring matches
-    matches = [];
- 
-    // regex used to determine if a string contains the substring `q`
-    substrRegex = new RegExp(q, 'i');
- 
-    // iterate through the pool of strings and for any string that
-    // contains the substring `q`, add it to the `matches` array
-    $.each(strs, function(i, str) {
-      if (substrRegex.test(str)) {
-        // the typeahead jQuery plugin expects suggestions to a
-        // JavaScript object, refer to typeahead docs for more info
-        matches.push({ value: str });
-      }
-    });
- 
-    cb(matches);
-  };
-};
- 
-var states = ["Taco Bell", "McDonald's", "American Apparel"
-];
- 
-$('#the-basics .typeahead').typeahead({
-  hint: true,
-  highlight: true,
-  minLength: 2
-},
-{
-  name: 'states',
-  displayKey: 'value',
-  source: substringMatcher(states)
-});
-</script>
+<%= javascript_include_tag "matcher" %>
+<%= javascript_include_tag "sortable" %>
+
