--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,18 @@
-<div class="jumbotron main_jumbo">
+<div class="main_jumbo">
 	<div class="container">
-		<p class="cabin jumbo_copy">GET FREAKING SMART</p>
-		<h4>(or at least act like it)</h4>
+		<div id="the-basics">
+      <%= form_tag brands_path, :method => 'get' do %>
+        <p>
+          <%= text_field_tag :search, params[:search], :placeholder => "Explore by brand name", :class => "form-control typeahead" %>
+          <div style="position: absolute; top: -9999px;"><%= submit_tag "Search", :name => nil, :class => "btn btn-default btn-xs"  %></div>
+        </p>
+      <% end %>
+    </div>
 	</div>
 </div>
 <div class="container">
 	<h1>Welcome to my app!</h1>
 	<p>Sign up here</p>
 </div>
+
+<%= javascript_include_tag "matcher" %>
