--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -19,3 +19,13 @@
   //text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);
   margin-top: -20px;
 }
+
+.brands_jumbo {
+	//background: url('banner.jpg') center;
+	background-color: #FFF;
+	height: 200px;
+  //color: #fff;
+  text-align: center;
+  //text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);
+  margin-top: -20px;
+}
