--- a/app/views/brands/index.html.erb
+++ b/app/views/brands/index.html.erb
@@ -1,5 +1,9 @@
 <%= stylesheet_link_tag "sortable-theme-bootstrap" %>
-
+<div class="brands_jumbo">
+  <div class="container">
+    
+  </div>
+</div>
 <div class="container">
   <%= link_to 'New Brand', new_brand_path %>
   <br /><br />
@@ -49,7 +53,7 @@
                     <%= link_to image_tag(brand.image.url(:thumb), :size => "40x40", :class => "img-rounded"), brand %>
                   </div>
                   <div class="col-md-10" style="text-align: left;">
-                    <h4><%= link_to brand.name, brand,  :class => "link-grey" %></h4>
+                    <h5><%= link_to brand.name, brand,  :class => "link-grey" %></h5>
                   </div>
                 </div>
               </td>
