--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,13 +1,17 @@
 <div class="main_jumbo">
 	<div class="container">
-		<div id="the-basics">
-      <%= form_tag brands_path, :method => 'get' do %>
-        <p>
-          <%= text_field_tag :search, params[:search], :placeholder => "Explore by brand name", :class => "form-control typeahead" %>
-          <div style="position: absolute; top: -9999px;"><%= submit_tag "Search", :name => nil, :class => "btn btn-default btn-xs"  %></div>
-        </p>
-      <% end %>
-    </div>
+		<div class="row" style="margin-top: 150px;">
+			<div class="col-md-8 col-md-offset-2">
+				<div id="the-basics">
+		      <%= form_tag brands_path, :method => 'get' do %>
+		        <p>
+		          <%= text_field_tag :search, params[:search], :placeholder => "Explore by brand name", :class => "form-control typeahead" %>
+		          <div style="position: absolute; top: -9999px;"><%= submit_tag "Search", :name => nil, :class => "btn btn-default btn-xs"  %></div>
+		        </p>
+		      <% end %>
+		    </div>
+		  </div>
+		</div>
 	</div>
 </div>
 <div class="container">
