--- a/app/views/brands/index.html.erb
+++ b/app/views/brands/index.html.erb
@@ -24,8 +24,14 @@
         </button>
         <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
           <li role="presentation"><a role="menuitem" tabindex="-1" href="/brands">All</a></li>
-          <li role="presentation"><a role="menuitem" tabindex="-1" href="?industry=Clothing">Clothing</a></li>
-          <li role="presentation"><a role="menuitem" tabindex="-1" href="?industry=Restaurants">Restaurants</a></li>
+          <li role="presentation"><a role="menuitem" tabindex="-1" href="?industry=Auto">Auto</a></li>
+          <li role="presentation"><a role="menuitem" tabindex="-1" href="?industry=Fashion">Fashion</a></li>
+          <li role="presentation"><a role="menuitem" tabindex="-1" href="?industry=Food and Beverage">Food and Beverage</a></li>
+          <li role="presentation"><a role="menuitem" tabindex="-1" href="?industry=Gaming">Gaming</a></li>
+          <li role="presentation"><a role="menuitem" tabindex="-1" href="?industry=Media">Media</a></li>
+          <li role="presentation"><a role="menuitem" tabindex="-1" href="?industry=Sports">Sports</a></li>
+          <li role="presentation"><a role="menuitem" tabindex="-1" href="?industry=Television">Television</a></li>
+          <li role="presentation"><a role="menuitem" tabindex="-1" href="?industry=Other">Other</a></li>
         </ul>
       </div>
     </div>
