--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -10,6 +10,15 @@
 	color: #37474F;
 }
 
+.link-categories {
+	color: #37474F;
+}
+
+.link-categories:hover {
+	color: #37474F;
+	text-decoration: none;
+}
+
 .main_jumbo {
 	//background: url('banner.jpg') center;
 	background-color: #FFEB3B;
