--- a/app/views/brands/index.html.erb
+++ b/app/views/brands/index.html.erb
@@ -29,6 +29,8 @@
           <li role="presentation"><a role="menuitem" tabindex="-1" href="?industry=Food and Beverage">Food and Beverage</a></li>
           <li role="presentation"><a role="menuitem" tabindex="-1" href="?industry=Gaming">Gaming</a></li>
           <li role="presentation"><a role="menuitem" tabindex="-1" href="?industry=Media">Media</a></li>
+          <li role="presentation"><a role="menuitem" tabindex="-1" href="?industry=Music">Music</a></li>
+          <li role="presentation"><a role="menuitem" tabindex="-1" href="?industry=Restaurant">Restaurant</a></li>
           <li role="presentation"><a role="menuitem" tabindex="-1" href="?industry=Sports">Sports</a></li>
           <li role="presentation"><a role="menuitem" tabindex="-1" href="?industry=Television">Television</a></li>
           <li role="presentation"><a role="menuitem" tabindex="-1" href="?industry=Other">Other</a></li>
@@ -44,10 +46,9 @@
           <tr>
             <th style="text-align: left;">Company</th>
             <th>Username</th>
-            <th>Momentum<br />Score</th>
+            <th>Momentum</th>
             <th>Industry</th>
-            <th data-sortable="false">Social Media<br />Presence</th>
-            <th>Website</th>
+            <th data-sortable="false">Web Presence</th>
           </tr>
         </thead>
         <tbody>
@@ -67,6 +68,11 @@
               <td><%= brand.momentum %></td>
               <td><%= brand.industry %></td>
               <td>
+                <% if brand.website.present? %>
+                  <%= link_to "http://#{brand.website}" do %>
+                    <i class="fa fa-link fa-lg fa-fw link-grey"></i>
+                  <% end %>
+                <% end %>
                 <% if brand.facebook.present? %>
                   <%= link_to "http://#{brand.facebook}" do %>
                     <i class="fa fa-facebook fa-lg fa-fw link-grey"></i>
@@ -83,7 +89,6 @@
                   <% end %>
                 <% end %>
               </td>
-              <td><%= link_to brand.website, "http://#{brand.website}", :class => "link-grey" %></td>
             </tr>
           <% end %>
         </tbody>
