--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -20,12 +20,10 @@
 }
 
 .main_jumbo {
-	//background: url('banner.jpg') center;
-	background-color: #FFEB3B;
+	background: url('front_banner.jpg') center;
 	height: 500px;
-  //color: #fff;
+  color: #fff;
   text-align: center;
-  //text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);
   margin-top: -20px;
 }
 
