--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,10 +1,18 @@
+@import url('//fonts.googleapis.com/css?family=Open+Sans:400,700,300,600');
+@import url('//fonts.googleapis.com/css?family=Cabin:600');
 
+$font-family-sans-serif: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 $body-bg: #F5F5F5;
 
 @import 'bootstrap';
 
 .center {
 	text-align: center;
+}
+
+.cabin {
+  font-family: 'Cabin', sans-serif;
+  font-weight: 600;
 }
 
 .btn {
