--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
 		<div class="row" style="margin-top: 150px;">
 			<div class="col-md-8 col-md-offset-2">
 				<h1 class="cabin" style="letter-spacing: 2.0; text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);">YOUR GUIDE TO BRANDS ON SNAPCHAT</h1>
-				<div id="the-basics">
+				<div id="prefetch">
 		      <%= form_tag brands_path, :method => 'get' do %>
 		        <p>
 		          <%= text_field_tag :search, params[:search], :placeholder => "Explore by brand name", :class => "form-control typeahead" %>
