--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -28,11 +28,21 @@
 }
 
 .brands_jumbo {
-	//background: url('banner.jpg') center;
+	background: url('database_banner.jpg') center;
 	background-color: #FFF;
 	height: 200px;
-  //color: #fff;
+  color: #fff;
   text-align: center;
-  //text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);
   margin-top: -20px;
+}
+
+.add_button {
+	position: fixed;
+	bottom: 0;
+	right: 0;
+	margin-bottom: 15px;
+	margin-right: 15px;
+	z-index: 9999;
+
 }
