--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,14 +8,13 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to "Snap Sherpa", root_path, :class => "navbar-brand" %>
+      <%= link_to image_tag('logo.png', :size => "20x20") + " Snap Sherpa", root_path, :class => "navbar-brand" %>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse navbar-ex1-collapse">
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Database", brands_path %></li>
-        <li><%= link_to "About", about_path %></li> 
       </ul>
     </div><!-- /.navbar-collapse -->
   </div>
