--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,11 @@
 	  <link href='//fonts.googleapis.com/css?family=Cabin' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
-		<%= render 'layouts/header' %>
-		<%= yield %>
+		<div class="wrapper">
+			<%= render 'layouts/header' %>
+			<%= yield %>
+			<div class="push"></div>
+		</div>
+		<%= render 'layouts/footer' %>
 	</body>
 </html>
