--- a/app/views/brands/show.html.erb
+++ b/app/views/brands/show.html.erb
@@ -53,7 +53,7 @@
   <div class="panel panel-default">
     <div class="panel-body">
       <h4>History</h4>
-      <%= @brand.history %>
+      <%= @brand.history.html_safe %>
     </div>
   </div>
 </div>
