--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -10,6 +10,14 @@
 	color: #37474F;
 }
 
+.link-light-grey {
+	color: #9e9e9e;
+}
+
+.link-light-grey:hover {
+	color: #9e9e9e;
+}
+
 .link-categories {
 	color: #37474F;
 }
