--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,15 +1,15 @@
 <div class="footer"> 
 	<div class="container">
-		<strong><a id="submitnew" data-toggle="popover" class="link-grey" style="cursor: pointer;">+ ADD DATA</a></strong>
+		<strong><a id="submitnew" data-toggle="popover" class="link-light-grey" style="cursor: pointer;">+ ADD DATA</a></strong>
 
 		<div id="popover_content_wrapper" style="display: none">
-  		<div>Have data to add? Am I missing your brand? Please tweet me at <a href="http://www.twitter.com/p_ngu" class="link-grey">@p_ngu</a></div>
+  		<div>Have data to add? Am I missing your brand? Please tweet me at <a href="http://www.twitter.com/p_ngu" class="link-light-grey">@p_ngu</a></div>
 		</div>
 
 		 &nbsp; &nbsp;
-		<%= link_to "ABOUT", about_path, :class => "link-grey" %> &nbsp; &nbsp;
+		<%= link_to "ABOUT", about_path, :class => "link-light-grey" %> &nbsp; &nbsp;
 		<div style="float:right">
-			&copy; 2015 WATER COOLER LABS
+			<%= link_to "Made", "creation.txt", :class => "link-light-grey" %> by Water Cooler Labs
 		</div>
 	</div>
 </div>
