Front landing copy

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,6 +3,7 @@
 		<div class="row" style="margin-top: 150px;">
 			<div class="col-md-8 col-md-offset-2">
 				<h1 class="cabin" style="letter-spacing: 2.0; text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);">YOUR GUIDE TO BRANDS ON SNAPCHAT</h1>
+				<h3 style="text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.8);">Connect with your favorite brands to get inside looks, exclusive content, promo codes, teasers, and more</h3>
 				<div id="the-basics">
 		      <%= form_tag brands_path, :method => 'get' do %>
 		        <p>
@@ -24,9 +25,6 @@
 		  </div>
 		</div>
 	</div>
-</div>
-<div class="container">
-	<h1>Welcome to my app!</h1>
 </div>
 
 <%= javascript_include_tag "matcher" %>
