--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
 	  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
 	  <%= csrf_meta_tags %>
 	  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	  <%= favicon_link_tag %>
+	  <%= favicon_link_tag 'favicon.ico' %>
 	  <link href='//fonts.googleapis.com/css?family=Cabin' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
