--- a/app/views/brands/show.html.erb
+++ b/app/views/brands/show.html.erb
@@ -1,7 +1,9 @@
 <div class="container">
   <p id="notice"><%= notice %></p>
-  <%= link_to 'Edit', edit_brand_path(@brand) %> |
-  <%= link_to 'Back', brands_path %>
+  <% if user_signed_in? %>
+    <%= link_to 'Edit', edit_brand_path(@brand) %> |
+    <%= link_to 'Back', brands_path %>
+  <% end %>
   <div class="row">
     <div class="col-md-12">
       <div class="panel panel-default">
