--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,6 +15,10 @@
     <div class="collapse navbar-collapse navbar-ex1-collapse">
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Database", brands_path %></li>
+        <% if user_signed_in? %>
+          <!--<li><%= link_to "Account Settings", edit_user_registration_path %></li>-->
+          <li><%= link_to "Sign out", destroy_user_session_path, :method => :delete %></li>
+        <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div>
