--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -20,6 +20,8 @@
 					  <option value="/brands?industry=Restaurant">Restaurant</option>
 					  <option value="/brands?industry=Food and Beverage">Food and Beverage</option>
 					  <option value="/brands?industry=Music">Music</option>
+					  <option value="/brands?industry=Entertainment">Entertainment</option>
+					  <option value="/brands?industry=Media">Media</option>
 					</select>
 		    </div>
 		  </div>
