--- a/app/views/brands/_form.html.erb
+++ b/app/views/brands/_form.html.erb
@@ -31,6 +31,14 @@
     <%= f.label :industry %>
     <%= f.text_field :industry, class: "form-control" %>
   </div>
+  <div class="checkbox">
+    <%= f.label :deals %>
+    <%= f.check_box :deals, class: "checkbox" %>
+  </div>
+  <div class="checkbox">
+    <%= f.label :previews %>
+    <%= f.check_box :previews, class: "checkbox" %>
+  </div>
   <div class="form-group">
     <%= f.label :website %>
     <%= f.text_field :website, class: "form-control" %>
