--- a/app/views/brands/index.html.erb
+++ b/app/views/brands/index.html.erb
@@ -22,8 +22,8 @@
         </p>
       <% end %>
     </div>
-    <div style="margin-left: 15px;">
-      <div class="dropdown">
+    <div>
+      <span class="dropdown" style="margin-left: 15px;">
         <button class="btn-filter btn-default btn-xs dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
           Industry
           <span class="caret"></span>
@@ -39,8 +39,8 @@
           <li role="presentation"><a role="menuitem" tabindex="-1" href="?industry=Sports">Sports</a></li>
           <li role="presentation"><a role="menuitem" tabindex="-1" href="?industry=Other">Other</a></li>
         </ul>
-      </div>
-      <div class="dropdown">
+      </span>
+      <span class="dropdown" style="margin-left: 15px;">
         <button class="btn-filter btn-default btn-xs dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
           Content
           <span class="caret"></span>
@@ -50,7 +50,7 @@
           <li role="presentation"><a role="menuitem" tabindex="-1" href="?deals=true">Deals</a></li>
           <li role="presentation"><a role="menuitem" tabindex="-1" href="?previews=true">Previews</a></li>
         </ul>
-      </div>
+      </span>
     </div>
   </div>
   <br />
