--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -6,8 +6,8 @@
   		<div>Have data to add? Am I missing your brand? Please tweet me at <a href="http://www.twitter.com/p_ngu" class="link-light-grey">@p_ngu</a></div>
 		</div>
 
-		 &nbsp; &nbsp;
-		<%= link_to "ABOUT", about_path, :class => "link-light-grey" %> &nbsp; &nbsp;
+		<!-- &nbsp; &nbsp;
+		<%= link_to "ABOUT", about_path, :class => "link-light-grey" %> &nbsp; &nbsp;-->
 		<div style="float:right">
 			<%= link_to "Made", "creation.txt", :class => "link-light-grey" %> by Water Cooler Labs
 		</div>
