--- a/app/views/brands/index.html.erb
+++ b/app/views/brands/index.html.erb
@@ -61,7 +61,7 @@
           <tr>
             <th style="text-align: left;">Company</th>
             <th>Username</th>
-            <th>Momentum</th>
+            <th>Activity</th>
             <th>Deals</th>
             <th>Previews</th>
             <th>Industry</th>
