--- a/app/views/brands/index.html.erb
+++ b/app/views/brands/index.html.erb
@@ -57,11 +57,12 @@
   <div style="background-color: #fff;">
     <div class="table-responsive">
       <table class="table table-hover table-condensed sortable-theme-bootstrap" id="brand-table" data-sortable>
+        <small style="color: #BDBDBD;">* Activity means number of days with Stories over last three days</small>
         <thead>
           <tr>
             <th style="text-align: left;">Company</th>
             <th>Username</th>
-            <th>Activity</th>
+            <th>Activity*</th>
             <th>Deals</th>
             <th>Previews</th>
             <th>Industry</th>
