--- a/app/views/brands/index.html.erb
+++ b/app/views/brands/index.html.erb
@@ -57,10 +57,10 @@
   <div style="background-color: #fff;">
     <div class="table-responsive">
       <table class="table table-hover table-condensed sortable-theme-bootstrap" id="brand-table" data-sortable>
-        <small style="color: #BDBDBD;">* Activity means number of days with Stories over last three days</small>
+        <small style="color: #BDBDBD;">* Activity means number of days with Stories over last four days</small>
         <thead>
           <tr>
-            <th style="text-align: left;">Company</th>
+            <th style="text-align: left;">Name</th>
             <th>Username</th>
             <th>Activity*</th>
             <th>Deals</th>
