--- a/app/views/brands/index.html.erb
+++ b/app/views/brands/index.html.erb
@@ -57,14 +57,14 @@
   <div style="background-color: #fff;">
     <div class="table-responsive">
       <table class="table table-hover table-condensed sortable-theme-bootstrap" id="brand-table" data-sortable>
-        <small style="color: #BDBDBD;">* Activity means number of days with Stories over last six days</small>
+        <small style="color: #BDBDBD;">* Activity means number of days with Stories over last nine days</small>
         <thead>
           <tr>
             <th style="text-align: left;">Name</th>
             <th>Username</th>
             <th>Activity*</th>
-            <th>Deals</th>
-            <th>Previews</th>
+            <th data-sortable="false">Deals</th>
+            <th data-sortable="false">Previews</th>
             <th>Industry</th>
             <th data-sortable="false">Web Presence</th>
           </tr>
