--- a/app/views/brands/index.html.erb
+++ b/app/views/brands/index.html.erb
@@ -57,7 +57,7 @@
   <div style="background-color: #fff;">
     <div class="table-responsive">
       <table class="table table-hover table-condensed sortable-theme-bootstrap" id="brand-table" data-sortable>
-        <small style="color: #BDBDBD;">* Activity means number of days with Stories over last nine days</small>
+        <small style="color: #BDBDBD;">* Activity means number of days with Stories over last ten days</small>
         <thead>
           <tr>
             <th style="text-align: left;">Name</th>
