--- a/app/views/brands/edit_individual.html.erb
+++ b/app/views/brands/edit_individual.html.erb
@@ -1,15 +1,41 @@
 <div class="container">
-	<h1>Edit Products</h1>
-	<%= form_tag update_individual_brands_path, :method => :put do %>
-		<% for brand in @brands %>
-			<%= fields_for "brands[]", brand do |f| %>
-				<h2><%= brand.name %></h2>
-				<div class="form-group">
-    			<%= f.label :momentum %>
-    			<%= f.text_field :momentum, class: "form-control" %>
-  			</div>
-			<% end %>
+	<h1>Edit Activity</h1>
+	<div style="background-color: #fff;">
+		<%= form_tag update_individual_brands_path, :method => :put do %>
+			<div class="table-responsive">
+		      <table class="table table-hover table-condensed">
+		      	<thead>
+		          <tr>
+		            <th style="text-align: left;">Name</th>
+		            <th>Momentum</th>
+		          </tr>
+		        </thead>
+		        <tbody>
+							<% for brand in @brands %>
+								<tr>
+									<%= fields_for "brands[]", brand do |f| %>
+										<td>
+			                <div class="row">
+			                  <div class="col-md-2">
+			                    <%= link_to image_tag(brand.image.url(:thumb), :size => "40x40", :class => "img-rounded"), brand %>
+			                  </div>
+			                  <div class="col-md-10" style="text-align: left;">
+			                    <h5><%= link_to brand.name, brand,  :class => "link-grey" %></h5>
+			                  </div>
+			                </div>
+			              </td>
+										<td>
+											<div class="form-group">
+							    			<%= f.text_field :momentum, class: "form-control" %>
+							  			</div>
+						  			</td>
+									<% end %>
+								</tr>
+							<% end %>
+						</tbody>
+					</table>
+				</div>
+			<p><%= submit_tag "Submit" %></p>
 		<% end %>
-		<p><%= submit_tag "Submit" %></p>
-	<% end %>
+	</div>
 </div>
